Fix editor being clipped

--- a/src/app.css
+++ b/src/app.css
@@ -1,7 +1,13 @@
 html, 
 body {
-    height: 100%;
+    height: 100vh;
     background-color : transparent;
+    /* border: 3px solid green; */
+}
+
+#root {
+  height: 100vh;
+  width: 100%;
 }
 
 .iframe-container {
